Removed contact form padding on mobile ; Fixed services grid items' spacing

--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -1,3 +1,5 @@
+/* DESKTOP */
+
 @media only screen and (min-width: 768px) {
     .contact-form {
         padding: 0px 25px 0px 0px;
@@ -52,9 +54,11 @@
     }
 }
 
+/* MOBILE */
+
 @media only screen and (max-width: 768px) {
     .contact-form {
-        padding: 15px;
+        padding: 0px;
     }
     
     .contact-form-name-container {
